execution-comparison: Fix compilation error with Java 11
Code in master branch used later Java APIs.

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>